# smart-piano

./: .gitignore  readme.md
app/: .gitignore  build.gradle  key.jks
app/src/main/cpp/: CMakeLists.txt  android_glue.cc
gradle/wrapper/: gradle-wrapper.properties
